--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "fibers": "~1.0.0"
+    "fibers": "*"
   },
   "devDependencies": {},
   "bundleDependencies": [],
